--- a/Thesis.tex
+++ b/Thesis.tex
@@ -14,6 +14,10 @@
 \usepackage{url}
 \usepackage{gloss}
 
+\usepackage{float}
+\usepackage[caption = false]{subfig}
+\usepackage[demo]{graphicx}
+
 \usepackage[top=1.2in,right=1.2in,left=1.5in,bottom=1.4in]{geometry} %needed to get margins right
 
 \renewcommand\glossheading[1]{%
@@ -27,9 +31,8 @@
 
 \title{Clinical Applications of Diffuse Optical Tomography in Breast Cancer Imaging}
 \author{Han Yong Ban}
-\submitdate{August 2013} \dept{Physics and Astronomy}
+\submitdate{July 2015} \dept{Physics and Astronomy}
 \superviser{Arjun G. Yodh, James M. Skinner Professor of Science, Professor of Physics} 
-\supervisor{Arjun G. Yodh} 
 \groupchair{Maria Drndic, Professor of Physics}
 \memberA{Frank Moscatelli, Professor of Physics}
 \memberB{TBD, Professor of Physics}
@@ -63,6 +66,6 @@
 
 \addcontentsline{toc}{chapter}{Bibliography}
 \bibliographystyle{plain}
-\bibliography{Thesis_HB}
+\bibliography{Thesis}
 
 \end{document}
